--- a/src/style.css
+++ b/src/style.css
@@ -2,8 +2,21 @@ body {
   font-family: sans-serif;
   margin: 0;
   padding: 0;
-  background: #f4f4f4;
+  background-color: #292727; /* Dark grey base */
+  background-image: url(knot-bg2.svg);
+   
+  background-size: cover;
+  background-attachment: fixed;
+  color: white;
 }
+
+.bg-glass {
+  background: rgba(255, 255, 255, 0.215);
+  box-shadow: 0 4px 24px 0 rgba(0,0,0,0.07);
+  backdrop-filter: blur(6px);
+}
+
+
 
 .centered {
   display: flex;
